re PR c++/10682 (chokes on a typedef for an enum inside a class template)

PR c++/10682
	* pt.c (instantiate_class_template): Use DECL_ARTIFICIAL to
	check for implicitly created typedef to an enum.

	* g++.dg/template/instantiate4.C: New test.

From-SVN: r67118